deleted extra index.html file and fixed footer height and text alignment

--- a/client/styles.css
+++ b/client/styles.css
@@ -141,11 +141,11 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 20vh;
+  height: 15vh;
   background-color: #14406A;
   color: white;
   text-align: center;
-  padding: 1rem;
+  padding: 2rem;
 }
 .footer p {
   background-color: #14406A;
